QuickFix build cannot find toList stream shortcut on remote